--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,17 @@
         <color name="dot_inactive_screen2">#008c57</color>
         <color name="dot_inactive_screen3">#0e1e49</color>
 
+
+
+    <color name="black">#666666</color>
+    <color name="gray">#999999</color>
+    <color name="blue">#599eff</color>
+    <color name="line">#aaaaaa</color>
+    <color name="white">#efefef</color>
+
+
+
+
     <array name="dot_on_page_active">
         <item>#8BC34A</item>
         <item>#B71C1C</item>
