--- a/app/src/main/res/layout/activity_map_mint4_me.xml
+++ b/app/src/main/res/layout/activity_map_mint4_me.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:onClick="OnButtonClick"
-        android:text="AR Scale" />
+        android:text="AR Draw" />
 
     <WebView
         android:layout_width="match_parent"
