--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="active">@android:color/holo_blue_dark</color>
 
     <color name="black_overlay">#66000000</color>
 
@@ -21,7 +22,6 @@
 
 
     <color name="black">#666666</color>
-    <color name="gray">#999999</color>
     <color name="blue">#599eff</color>
     <color name="line">#aaaaaa</color>
     <color name="white">#efefef</color>
