--- a/app/src/main/res/layout/activity_map_mint4_me.xml
+++ b/app/src/main/res/layout/activity_map_mint4_me.xml
@@ -13,11 +13,29 @@
     <Button
         android:id="@+id/button2"
         style="@android:style/Widget.Button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="right|bottom"
+        android:background="@drawable/draw"
+
+        android:onClick="OnButtonClickD"
+        android:text="AR Draw"
+
+        />
+
+    <Button
+        android:id="@+id/button3"
+        style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:onClick="OnButtonClick"
-        android:text="AR Draw" />
+        android:layout_gravity="left|bottom"
+        android:background="@drawable/circle"
+        android:fontFamily="sans-serif-smallcaps"
+        android:onClick="OnButtonClickS"
+        android:text="AR Scale"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#aaff00"
+        android:typeface="normal" />
 
     <WebView
         android:layout_width="match_parent"
